--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "celebrate": "^10.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-winston": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.3",
     "mongoose-type-email": "^1.0.11",
-    "mongoose-type-url": "^1.0.6"
+    "mongoose-type-url": "^1.0.6",
+    "winston": "^3.2.1"
   }
 }
